--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -16,7 +16,7 @@
             class="edu.ualberta.med.biobank.preferences.PreferenceInitializer">
       </initializer>
    </extension>
-   <extension
+     <extension
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
@@ -25,6 +25,22 @@
          <property
                name="windowImages"
                value="icons/alt_window_16.gif,icons/alt_window_32.gif">
+         </property>
+      </product>
+   </extension>
+   <extension
+         id="product1"
+         point="org.eclipse.core.runtime.products">
+      <product
+            application="biobank2.biobank2"
+            name="BioBank2">
+         <property
+               name="windowImages"
+               value="icons/alt_window_16.gif,icons/alt_window_32.gif">
+         </property>
+         <property
+               name="appName"
+               value="BioBank2">
          </property>
       </product>
    </extension>
@@ -66,42 +82,40 @@
    <extension
          point="org.eclipse.ui.commands">
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.LoginHandler"
             id="edu.ualberta.med.biobank.commands.login"
             name="Login">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.LogoutHandler"
             id="edu.ualberta.med.biobank.commands.logout"
             name="Logout">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.QuitHandler"
+            defaultHandler="edu.ualberta.med.biobank.handlers.QuitHandler"
             id="edu.ualberta.med.biobank.commands.quit"
             name="Quit">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.SiteAddHandler"
+            defaultHandler="edu.ualberta.med.biobank.handlers.SiteAddHandler"
             id="edu.ualberta.med.biobank.commands.addSite"
             name="Add Repository Site">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.StudyAddHandler"
+            defaultHandler="edu.ualberta.med.biobank.handlers.StudyAddHandler"
             id="edu.ualberta.med.biobank.commands.addStudy"
             name="Add Study">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.ClinicAddHandler"
+            defaultHandler="edu.ualberta.med.biobank.handlers.ClinicAddHandler"
             id="edu.ualberta.med.biobank.commands.addClinic"
             name="Add Clinic">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.SearchHandler"
+            defaultHandler="edu.ualberta.med.biobank.handlers.SearchHandler"
             id="edu.ualberta.med.biobank.commands.search"
             name="Search">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handler.PatientAdministrationHandler"
+            defaultHandler="edu.ualberta.med.biobank.handlers.PatientAdministrationHandler"
             id="edu.ualberta.med.biobank.commands.patientAdmin"
             name="Patient administration">
       </command>
@@ -364,64 +378,6 @@
          </view>
       </perspectiveExtension>
       </extension>
-      <extension
-         point="org.eclipse.ui.perspectives">
-      <perspective
-            class="edu.ualberta.med.biobank.rcp.MainPerspective"
-            id="edu.ualberta.med.biobank.perspective.main"
-            name="Biobank Perspective">
-      </perspective>
-      <perspective
-            class="edu.ualberta.med.biobank.rcp.PatientsAdministrationPerspective"
-            fixed="true"
-            id="edu.ualberta.med.biobank.perspective.patients"
-            name="Patients Administration">
-      </perspective>
-   </extension>
-   <extension
-         point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension
-            targetID="edu.ualberta.med.biobank.perspective.main">
-         <view
-               closeable="false"
-               id="edu.ualberta.med.biobank.views.SessionsView"
-               minimized="false"
-               moveable="false"
-               ratio="0.5"
-               relationship="left"
-               relative="org.eclipse.ui.editorss"
-               showTitle="false"
-               standalone="true"
-               visible="true">
-         </view>
-         <view
-               closeable="true"
-               id="edu.ualberta.med.biobank.views.SearchView"
-               minimized="false"
-               moveable="true"
-               relationship="top"
-               relative="org.eclipse.ui.editorss"
-               showTitle="true"
-               standalone="true"
-               visible="true">
-         </view>
-      </perspectiveExtension>
-      <perspectiveExtension
-            targetID="edu.ualberta.med.biobank.perspective.patients">
-         <view
-               closeable="false"
-               id="edu.ualberta.med.biobank.views.patientsAdmin"
-               minimized="false"
-               moveable="false"
-               ratio="0.95"
-               relationship="top"
-               relative="org.eclipse.ui.editorss"
-               showTitle="true"
-               standalone="true"
-               visible="true">
-         </view>
-      </perspectiveExtension>
-   </extension>
    <extension
          point="org.eclipse.ui.editors">
       <editor
@@ -540,23 +496,7 @@
             name="%scheme.info.name">
       </scheme>
    </extension>
-   <extension
-         id="product1"
-         point="org.eclipse.core.runtime.products">
-      <product
-            application="biobank2.biobank2"
-            name="BioBank2">
-         <property
-               name="windowImages"
-               value="icons/alt_window_16.gif,icons/alt_window_32.gif">
-         </property>
-         <property
-               name="appName"
-               value="BioBank2">
-         </property>
-      </product>
-   </extension>
-   <extension
+    <extension
          point="org.eclipse.ui.preferencePages">
       <page
             class="edu.ualberta.med.biobank.preferences.GeneralConfigurationPreferencePage"
@@ -621,5 +561,15 @@
             </equals>
          </with>
       </definition>
+   </extension>
+   <extension
+         point="org.eclipse.ui.services">
+      <sourceProvider
+            provider="edu.ualberta.med.biobank.sourceproviders.SessionState">
+         <variable
+               name="edu.ualberta.med.biobank.commands.sourceprovider.active"
+               priorityLevel="workbench">
+         </variable>
+      </sourceProvider>
    </extension>
 </plugin>
