--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -20,7 +20,7 @@
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            application="edu.ualberta.med.biobank.application"
+            application="biobank2.biobank2"
             name="BioBank2">
          <property
                name="windowImages"
