--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -157,22 +157,18 @@
             class="edu.ualberta.med.biobank.handlers.LoginHandler"
             commandId="edu.ualberta.med.biobank.commands.login">
          <activeWhen>
-             <with variable="edu.ualberta.med.biobank.sourceprovider.loginState">
-                 <equals value="loggedOut">
-                 </equals>
-             </with>
+            <reference
+                  definitionId="biobank2.loggedOut">
+            </reference>
          </activeWhen>
       </handler>
       <handler
             class="edu.ualberta.med.biobank.handlers.LogoutHandler"
             commandId="edu.ualberta.med.biobank.commands.logout">
          <activeWhen>
-            <with
-                  variable="edu.ualberta.med.biobank.sourceprovider.loginState">
-               <equals
-                     value="loggedIn">
-               </equals>
-            </with>
+            <reference
+                  definitionId="biobank2.loggedIn">
+            </reference>
          </activeWhen>
       </handler>
       <handler
@@ -186,11 +182,9 @@
          <enabledWhen>
             <with
                   variable="activePartId">
-               <not>
-                  <equals
-                        value="edu.ualberta.med.biobank.views.patients.ScanLink">
-                  </equals>
-               </not>
+               <equals
+                     value="edu.ualberta.med.biobank.views.patientsAdmin">
+               </equals>
             </with>
          </enabledWhen>
       </handler>
@@ -205,11 +199,9 @@
          <enabledWhen>
             <with
                   variable="activePartId">
-               <not>
-                  <equals
-                        value="edu.ualberta.med.biobank.views.patients.ScanLink">
-                  </equals>
-               </not>
+               <equals
+                     value="edu.ualberta.med.biobank.views.patientsAdmin">
+               </equals>
             </with>
          </enabledWhen>
       </handler>
@@ -307,6 +299,54 @@
                   </reference>
                </visibleWhen>
             </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.addStudy"
+                  icon="icons/book_open.png"
+                  label="Add Study"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>                  
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.addClinic"
+                  icon="icons/transmit_blue.png"
+                  label="Add Clinic"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>                  
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.addContainerType"
+                  icon="icons/basket_edit.png"
+                  label="Add Container Type"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>                  
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.addContainer"
+                  icon="icons/basket.png"
+                  label="Add Container"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>                  
+            </command>
          </toolbar>         
          <toolbar
                id="edu.ualberta.med.biobank.toolbar.patientsPerspective">
@@ -333,30 +373,6 @@
                         definitionId="biobank2.patientsPerpectiveSelected">
                   </reference>
                </visibleWhen>
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.addStudy"
-                  icon="icons/book_open.png"
-                  label="Add Study"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.addClinic"
-                  icon="icons/transmit_blue.png"
-                  label="Add Clinic"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.addContainerType"
-                  icon="icons/basket_edit.png"
-                  label="Add Container Type"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.addContainer"
-                  icon="icons/basket.png"
-                  label="Add Container"
-                  style="push">
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.patients.defaultLink"
@@ -414,17 +430,6 @@
                showTitle="false"
                standalone="false"
                visible="true">
-         </view>
-         <view
-               closeable="false"
-               id="edu.ualberta.med.biobank.views.patients.ScanLink"
-               minimized="false"
-               moveable="false"
-               relationship="stack"
-               relative="edu.ualberta.med.biobank.views.patientsAdmin"
-               showTitle="false"
-               standalone="false"
-               visible="false">
          </view>
       </perspectiveExtension>
       </extension>
@@ -515,10 +520,11 @@
             name="Container View">
       </editor>
       <editor
-            class="edu.ualberta.med.biobank.forms.AddPalletSamplesEntryForm"
+            class="edu.ualberta.med.biobank.forms.ScanLinkEntryForm"
             default="false"
-            id="edu.ualberta.med.biobank.forms.AddPalletSamplesEntryForm"
-            name="Add Palette Samples Entry">
+            icon="icons/scanLink.png"
+            id="edu.ualberta.med.biobank.forms.ScanLinkEntryForm"
+            name="Scan Link">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.AssignSamplesLocationEntryForm"
@@ -588,16 +594,9 @@
       <view
             allowMultiple="false"
             class="edu.ualberta.med.biobank.views.PatientAdministrationView"
+            icon="icons/patientPerspective.png"
             id="edu.ualberta.med.biobank.views.patientsAdmin"
             name="Patients administration"
-            restorable="true">
-      </view>
-      <view
-            allowMultiple="false"
-            class="edu.ualberta.med.biobank.views.patients.ScanLinkView"
-            icon="icons/scanLink.png"
-            id="edu.ualberta.med.biobank.views.patients.ScanLink"
-            name="Scan Link"
             restorable="true">
       </view>
    </extension>
@@ -618,6 +617,24 @@
                variable="activeWorkbenchWindow.activePerspective">
             <equals
                   value="edu.ualberta.med.biobank.perspective.patients">
+            </equals>
+         </with>
+      </definition>
+      <definition
+            id="biobank2.loggedIn">
+         <with
+               variable="edu.ualberta.med.biobank.sourceprovider.loginState">
+            <equals
+                  value="loggedIn">
+            </equals>
+         </with>
+      </definition>
+      <definition
+            id="biobank2.loggedOut">
+         <with
+               variable="edu.ualberta.med.biobank.sourceprovider.loginState">
+            <equals
+                  value="loggedOut">
             </equals>
          </with>
       </definition>
