HQL query for editing child types of containertype

--- a/eclipse_ws/biobank2/.project
+++ b/eclipse_ws/biobank2/.project
@@ -3,6 +3,7 @@
 	<name>biobank2</name>
 	<comment></comment>
 	<projects>
+		<project>scannerConfig</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
